@@ -1,4 +1,9 @@
 2015-04-27 Andrew Burgess <andrew.burgess@embecosm.com>
+	Restructure code, splitting up the setup routine into a setup and
+	a refresh functions.  There should be no user visible effects from
+	this restructuring.
+
+2015-04-27 Andrew Burgess <andrew.burgess@embecosm.com>
 	Remove `browse-kill-ring-no-duplicates'.  This functionality was
 	never related to browsing the kill-ring, and would be better moved
 	in to a different package.
